Mave gap from margin to padding to fix vertical scrolling

--- a/css/layouts/color-blocks.css
+++ b/css/layouts/color-blocks.css
@@ -48,11 +48,11 @@ main {
    margin: 0px -5px;
    }
 main >div:nth-child(1) {
-   flex: 0 0 65%;
-   }  /* wide 1st column */
+   flex: 0 0 65%;  /* wide 1st column */
+   }
 main >div:nth-child(2) {
-   flex: 0 0 35%;
-   }  /* narrrow 2nd column */
+   flex: 0 0 35%;  /* narrrow 2nd column */
+   }
 main >div:first-child:last-child {
    flex: auto;
    }
@@ -140,7 +140,6 @@ body >footer a:hover {
    }
 /* Mobile devices */
 @media (max-width: 667px) {  /* selects iPhone 6/6s/7/8 landscape and anything narrower */
-   body { margin: 20px auto; }
    body >header button { font-size: 0.8rem; }
    body >header >h1 { font-size: 1.6rem; }
    body >header >h1+h2 { font-size: 1.3rem; }
