--- a/css/layouts/vertical-bars.css
+++ b/css/layouts/vertical-bars.css
@@ -25,7 +25,6 @@ body {
    border-top: none;
    border-bottom: none;
    padding: 5px 25px;
-   margin: 0px auto;
    }
 body >header {
    margin-bottom: 50px;
